--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <title>Terms of Service – Shop AI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 16px;
+      line-height: 1.6;
+    }
+    h1, h2, h3 {
+      margin-top: 1.4em;
+    }
+  </style>
+</head>
+<body>
+  <h1>Terms of Service</h1>
+
+  <p>X</p>
+  <!-- Ersetze das X später durch deine echten Nutzungsbedingungen. -->
+
+</body>
+</html>
 
