--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -20,7 +20,129 @@
 <body>
   <h1>Privacy Policy</h1>
 
-  <p>X</p>
+  <p>At Shop AI, your privacy is our priority. This Privacy Policy outlines how we collect, use, and protect your personal information when you use our app. By accessing or using Shop AI, you consent to the practices described below.
+
+1. Information We Collect
+
+We collect the following types of information to provide and improve our services:
+
+Personal Information: This includes data you may provide that identifies you:
+
+Name/Nickname: If you provide a name or nickname during onboarding, it is stored locally on your device for personalization. This information is not transmitted to our servers.
+
+Contact Data: If you contact us for support or feedback (e.g., via email), we may collect your name, email address, and any information you choose to share in that communication.
+
+Payment Details: If you subscribe to premium features, payment information (such as billing name and payment method) is handled securely by the Apple App Store and our payment service provider. We do not directly collect or store your financial details on our servers.
+
+Usage Data: When you use Shop AI, certain usage information may be collected automatically:
+
+App interaction details such as features accessed, session duration, and in-app navigation flows.
+
+Device and technical information including your device model, operating system version, app version, and an anonymous device identifier.
+
+Log data like IP address and timestamps when the app connects to our services (or third-party services) for functionality. This data is generally used for security, analytics, or to ensure the service is working properly.
+
+User Input (AI Queries): The content of any prompts, questions, or text you enter into the app’s AI features. This data is transmitted to our third-party AI provider (OpenAI’s ChatGPT) in order to generate responses for you. We do not store these AI query contents on our own servers, but be aware that OpenAI may temporarily process and store such input as needed to provide the service. (By using the AI features, you consent to this data being sent to and processed by the AI service.)
+
+Note: Shop AI does not require account registration or profile creation. Other than an optional nickname, we do not ask for personal details like email or address during normal app usage. All data related to your usage is stored on your device or processed through the third-party services noted, not on our own servers.
+
+2. How We Use Your Information
+
+We use the collected information for the following purposes:
+
+To Provide and Personalize Services: Data such as your in-app actions and any name you provide help us operate the app effectively and personalize your experience (for example, greeting you by your nickname or tailoring content to your usage patterns).
+
+AI Functionality: Your input data (prompts/questions) is used to generate AI-powered responses via OpenAI’s ChatGPT. This allows us to deliver the core functionality of Shop AI and answer your queries.
+
+App Improvement: We analyze usage data and trends (e.g., feature popularity, crash reports) to understand how the app is used. This helps us troubleshoot issues, optimize performance, and develop new features that enhance user experience.
+
+Communication: We may use your contact information to send you important updates about the app, respond to customer support requests, or share information about new features (if you have reached out to us or given consent to be contacted).
+
+Payments and Subscription Management: Information related to your subscription (such as confirmation of purchase or subscription status) is used to unlock premium content and manage billing through the App Store. We ensure your subscription is active and provide related services (e.g., premium features access).
+
+Legal Compliance and Enforcement: To enforce our Terms and Conditions and other policies, and to comply with legal obligations. For example, we may use data to prevent fraudulent use of the app or to meet any applicable law enforcement requests.
+
+3. Data Sharing
+
+We do not sell or rent your personal information to third parties. We only share information in the following circumstances:
+
+3.1 Service Providers: We use trusted third-party services to help us operate Shop AI and deliver core features:
+
+Apple App Store & Payment Processor: Handles subscription purchases and payments. When you subscribe, necessary information (like your Apple ID and payment details) is processed by Apple. We receive confirmation of your purchase and subscription status but do not see your full payment information.
+
+Superwall (Subscription Management): We integrate a third-party service (Superwall) to manage our paywall and subscription flow. Superwall may collect device identifiers or analytics data related to how you interact with subscription offers, to ensure a smooth purchase experience and to analyze conversion rates.
+
+OpenAI (AI Service Provider): We send the text of your queries and prompts to OpenAI’s ChatGPT service, which processes the data and returns AI-generated responses. This means that any personal information you include in a query will be shared with OpenAI solely for the purpose of providing you with an answer. OpenAI may record these inputs and outputs temporarily in accordance with their policies, but we do not control their data retention. (We encourage you not to include sensitive personal details in your AI queries.)
+
+Analytics/Crash Reporting: (If applicable) We may use built-in platform analytics or crash reporting services to collect anonymized data on app performance and stability. This helps us identify and fix issues. Any such service would be configured to avoid collecting personally identifiable information whenever possible.
+
+All our service providers are vetted to ensure they meet industry standards for data protection. They are only given access to information necessary for them to perform their specific tasks on our behalf and are contractually obligated to protect it.
+
+3.2 Legal Compliance: We may disclose your information if required to do so by law or in response to valid requests by public authorities (e.g., a court or government agency). We may also share information if we believe in good faith that such action is necessary to comply with legal obligations, protect and defend the rights or property of Shop AI (or its users), investigate fraud, or ensure the safety of users or the public.
+
+3.3 Business Transfers: If Shop AI or its parent organization is involved in a merger, acquisition, bankruptcy, or sale of assets, your information may be transferred to the successor or acquiring entity. We will ensure the new owner continues to honor the commitments we’ve made in this Privacy Policy regarding your personal data.
+
+4. Data Security
+
+We implement industry-standard security measures to safeguard your personal information and prevent unauthorized access or disclosure. This includes using encryption for data in transit (for example, communications between the app and our third-party services are protected via HTTPS) and storing any locally saved data in the app’s secure storage on your device.
+
+However, please note that no method of electronic transmission or storage is 100% secure. While we strive to protect your data and regularly review our security practices, we cannot guarantee absolute security. You share and use the app at your own risk. If we become aware of a security breach that affects your personal data, we will notify you as required by applicable law.
+
+5. Your Rights
+
+Depending on your jurisdiction (for example, countries in the European Union or regions with similar data protection laws), you may have certain rights regarding your personal data. These may include:
+
+Access and Portability: The right to request a copy of the personal data we have about you and to receive it in a commonly used, machine-readable format.
+
+Correction: The right to request that we correct or update any inaccurate or incomplete personal information we hold about you.
+
+Deletion: The right to request deletion of your personal data. For instance, if you wish to delete any data that Shop AI may have collected, you can contact us to request this. Since our app primarily stores data on your device and we do not maintain user profiles, deleting the app will remove personal data stored on your device. We will also instruct our service providers to delete your data if applicable and possible (except where we are legally required to retain it).
+
+Restriction of Processing: The right to ask us to limit the processing of your data in certain circumstances (for example, if you contest the accuracy of the data or have objected to our processing).
+
+Withdrawal of Consent: If we are processing your personal data based on your consent, you have the right to withdraw that consent at any time. For example, if you previously allowed data sharing with a third-party service, you can revoke consent by adjusting settings (where applicable) or contacting us.
+
+To exercise any of these rights, or if you have questions or concerns about your personal data, please contact us at [support@shopaiapp.com]. We may ask you to verify your identity before fulfilling certain requests. We will respond to your request within the timeframe required by applicable law and will assist you to the fullest extent possible.
+
+6. Data Retention
+
+We retain personal data only for as long as necessary to fulfill the purposes outlined in this Privacy Policy or as required by law. In practice, this means:
+
+On-Device Data: Personal information stored on your device (like your nickname or app usage data cached for performance) remains until you delete the app or clear the app’s data. If you remove the app from your device, this local data will be deleted automatically by the operating system.
+
+AI Query Data: We do not store your AI query content on our own systems. Any such data is transiently processed by our AI provider (OpenAI) to generate responses. OpenAI may retain query data for a short period for quality assurance or to comply with their policies, but it is not retained by us.
+
+Subscription and Transaction Data: Records of your subscription status and transaction history are maintained as long as you have an active subscription and for a reasonable period thereafter (for example, to comply with financial record-keeping laws or to handle refunds). Most of this information is stored by Apple and available to us via Apple’s systems rather than stored on our own servers.
+
+Contact and Support Communications: If you contact us via email or other channels, we may retain those communications for a period necessary to address your inquiry, provide support, and improve our services. Once such data is no longer needed (and we are not legally required to keep it), we will delete it.
+
+When personal data is no longer necessary for the purpose it was collected, we will securely delete, anonymize, or isolate it. If immediate deletion is not possible (for example, because the data is stored in backup archives), we will securely store it and isolate it from further processing until deletion is possible.
+
+7. Cookies and Tracking Technologies
+
+Shop AI itself does not use traditional web cookies, as it is a mobile application. However, we and our third-party service providers may use similar technologies and tools within the app environment to enhance your experience and collect usage data. Examples include:
+
+Local Storage: We may store certain preferences or app data on your device so that the app remembers your settings and operates smoothly (for instance, saving your chosen app settings or your onboarding nickname locally).
+
+Analytics SDKs or APIs: If we employ any analytics or crash reporting tools, these may use unique identifiers (such as a device ID assigned by Apple or an anonymized user ID) to track usage patterns, app performance, and crashes. This helps us improve the app and fix issues quickly.
+
+In-App Tracking for Subscriptions: Our subscription provider may use technology to track events like when you view a subscription offer or complete a purchase. This tracking ensures that premium content is unlocked appropriately and can help us understand conversion rates.
+
+You can control or reset certain identifiers by adjusting settings on your device. For example, you can usually reset your device’s advertising or analytics identifiers, or disable sharing of analytics data with app developers in your device privacy settings. Please note that limiting these functions might affect the app’s performance or the availability of some features (for instance, disabling crash reporting might limit our ability to diagnose issues you encounter).
+
+8. Third-Party Links
+
+The app may contain links to external websites or services that are not operated by us (for example, a link to our support page, social media, or referenced resources). If you click on a third-party link, you will be directed to that third party’s site or service.
+
+Please note that we have no control over the content, privacy practices, or policies of third-party websites or services. This Privacy Policy does not apply to your activities on those external sites. We strongly encourage you to review the privacy policies of any third-party services you visit or use, especially if you choose to provide personal information to them.
+
+9. Updates to this Privacy Policy
+
+We may update this Privacy Policy from time to time to reflect changes in our practices, incorporate new features, or ensure compliance with legal requirements. When we make significant changes, we will notify you through appropriate means – for example, by posting a notice within the app, updating the date at the top of this policy, or through other communication channels.
+
+Your continued use of Shop AI after any changes to this Privacy Policy signifies your acceptance of those changes. We encourage you to review this document periodically to stay informed about how we are protecting your information.
+
+Contact Us: If you have any questions or concerns about this Privacy Policy or our data practices, please contact us at [support@shopaiapp.com]. We value your privacy and will address your inquiries as promptly as possible.</p>
   <!-- Ersetze das X später durch deine echte Datenschutzerklärung. -->
 
 </body>
