--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
       line-height: 1.6;
     }
     h1, h2, h3 {
-      margin-top: 1.4em;
+      margin-top: 1.4em;@
     }
     p {
       margin-bottom: 1em;
@@ -88,7 +88,7 @@
     <li>Restriction of processing</li>
     <li>Withdrawal of consent</li>
   </ul>
-  <p>To exercise these rights, contact us at <a href="mailto:support@shopaiapp.com">support@shopaiapp.com</a>.</p>
+  <p>To exercise these rights, contact us at <a href="mailto:info@laionex.com">info@laionex.com</a>.</p>
 
   <h2>6. Data Retention</h2>
   <ul>
@@ -113,6 +113,6 @@
   <h2>9. Updates to this Privacy Policy</h2>
   <p>We may update this policy and notify you through appropriate channels. Continued use of the app after updates means you accept the changes.</p>
 
-  <p><strong>Contact Us:</strong> For questions, email <a href="mailto:support@shopaiapp.com">support@shopaiapp.com</a>.</p>
+  <p><strong>Contact Us:</strong> For questions, email <a href="mailto:info@laionex.com">info@laionex.com</a>.</p>
 </body>
 </html>
