--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Privacy Policy – Shop AI</title>
@@ -13,13 +13,19 @@
       line-height: 1.6;
     }
     h1, h2, h3 {
-      margin-top: 1.4em;@
+      margin-top: 1.4em;
     }
     p {
       margin-bottom: 1em;
     }
     ul {
       padding-left: 1.5em;
+      margin-bottom: 1em;
+    }
+    .updated {
+      margin-top: 2em;
+      font-size: 0.9em;
+      color: #555;
     }
   </style>
 </head>
@@ -114,5 +120,8 @@
   <p>We may update this policy and notify you through appropriate channels. Continued use of the app after updates means you accept the changes.</p>
 
   <p><strong>Contact Us:</strong> For questions, email <a href="mailto:info@laionex.com">info@laionex.com</a>.</p>
+
+  <p class="updated"><em>Last updated: December 2025</em></p>
+
 </body>
 </html>
